@@ -411,3 +411,7 @@ Additional documentation.
 
 Added support for versions containing "rc."
 ----------------------------------------------------------------------
+Fri Jun 27 17:53:29 2003                        Michael Jennings (mej)
+
+Starting in on the docs for the object system.  Yum.
+----------------------------------------------------------------------
